# ActNow-Backend

./: .env_example  .gitignore  Dockerfile  README.md  app.py  database_example.py  docker-compose.yml  pyproject.toml  pyvenv.cfg  requirements.txt
.github/workflows/: docker-publish.yml
Scripts/: activate  activate.bat  activate.fish  activate.nu  dul-receive-pack  dul-upload-pack
examples/session_task/: session_routes.py
src/backend/: dependencies.py  sessions.py
src/backend/database/: __init__.py  orm.py
src/backend/internals/: goals.py  stories.py  story_create.py  users.py
src/backend/routes/: UserDataList.json  auth.py  authentication.py  deauthentication.py  favorite_goals.py  get_all_stories_by_userID.py  get_goals.py  goal_update.py  goal_update_endpoint.py  goals.py  goals_create.py  goals_endpoint.py  likes.py  logic_goals.py  main.py  nickname_validation.py  stories_endpoint.py  story_create.py  story_endpoint.py  story_get.py  update_story.py  user-registration-endpoint.py  user_de-authorization.py  user_de_authorization.py  user_get_story.py  user_registration.py  users.py  users_endpoint.py
